--- a/config/buildroot-config.2022.02.1
+++ b/config/buildroot-config.2022.02.1
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -g4842fa6-dirty Configuration
+# Buildroot -g5f47648 Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -494,7 +494,7 @@ BR2_LINUX_KERNEL_UIMAGE_LOADADDR=""
 # Target packages
 #
 BR2_PACKAGE_BUSYBOX=y
-BR2_PACKAGE_BUSYBOX_CONFIG="../../config/busybox-config.2022.02"
+BR2_PACKAGE_BUSYBOX_CONFIG="../../config/busybox-config.2022.02.1"
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES=""
 # BR2_PACKAGE_BUSYBOX_SHOW_OTHERS is not set
 # BR2_PACKAGE_BUSYBOX_INDIVIDUAL_BINARIES is not set
@@ -1202,7 +1202,7 @@ BR2_PACKAGE_SEDUTIL_ARCH_SUPPORTS=y
 # udisks needs udev /dev management
 #
 # BR2_PACKAGE_UHUBCTL is not set
-# BR2_PACKAGE_UMTPRD is not set
+BR2_PACKAGE_UMTPRD=y
 
 #
 # upower needs udev /dev management
