--- a/config/buildroot-config.2022.02.1
+++ b/config/buildroot-config.2022.02.1
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -g5f47648 Configuration
+# Buildroot -gb22187a Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -739,7 +739,10 @@ BR2_PACKAGE_PROVIDES_HOST_GETTEXT="host-gettext-tiny"
 #
 # davfs2 needs a glibc or uClibc toolchain
 #
-# BR2_PACKAGE_DOSFSTOOLS is not set
+BR2_PACKAGE_DOSFSTOOLS=y
+BR2_PACKAGE_DOSFSTOOLS_FATLABEL=y
+BR2_PACKAGE_DOSFSTOOLS_FSCK_FAT=y
+BR2_PACKAGE_DOSFSTOOLS_MKFS_FAT=y
 # BR2_PACKAGE_E2FSPROGS is not set
 # BR2_PACKAGE_E2TOOLS is not set
 # BR2_PACKAGE_ECRYPTFS_UTILS is not set
@@ -1436,7 +1439,7 @@ BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # Filesystem
 #
 # BR2_PACKAGE_GAMIN is not set
-# BR2_PACKAGE_LIBCONFIG is not set
+BR2_PACKAGE_LIBCONFIG=y
 # BR2_PACKAGE_LIBCONFUSE is not set
 # BR2_PACKAGE_LIBFUSE is not set
 # BR2_PACKAGE_LIBFUSE3 is not set
@@ -1629,7 +1632,15 @@ BR2_PACKAGE_GNU_EFI_ARCH_SUPPORTS=y
 # libgudev needs udev /dev handling and a toolchain w/ wchar, threads
 #
 # BR2_PACKAGE_LIBHID is not set
-# BR2_PACKAGE_LIBIIO is not set
+BR2_PACKAGE_LIBIIO=y
+BR2_PACKAGE_LIBIIO_LOCAL_BACKEND=y
+BR2_PACKAGE_LIBIIO_XML_BACKEND=y
+BR2_PACKAGE_LIBIIO_NETWORK_BACKEND=y
+BR2_PACKAGE_LIBIIO_USB_BACKEND=y
+BR2_PACKAGE_LIBIIO_SERIAL_BACKEND=y
+BR2_PACKAGE_LIBIIO_IIOD=y
+# BR2_PACKAGE_LIBIIO_IIOD_USBD is not set
+BR2_PACKAGE_LIBIIO_TESTS=y
 
 #
 # libinput needs udev /dev management
@@ -1649,13 +1660,15 @@ BR2_PACKAGE_GNU_EFI_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBRAW1394 is not set
 # BR2_PACKAGE_LIBRTLSDR is not set
 # BR2_PACKAGE_LIBSERIAL is not set
-# BR2_PACKAGE_LIBSERIALPORT is not set
+BR2_PACKAGE_LIBSERIALPORT=y
 # BR2_PACKAGE_LIBSIGROK is not set
 # BR2_PACKAGE_LIBSIGROKDECODE is not set
 # BR2_PACKAGE_LIBSOC is not set
 # BR2_PACKAGE_LIBSS7 is not set
-# BR2_PACKAGE_LIBUSB is not set
-# BR2_PACKAGE_LIBUSBGX is not set
+BR2_PACKAGE_LIBUSB=y
+# BR2_PACKAGE_LIBUSB_EXAMPLES is not set
+# BR2_PACKAGE_LIBUSB_COMPAT is not set
+BR2_PACKAGE_LIBUSBGX=y
 # BR2_PACKAGE_LIBV4L is not set
 # BR2_PACKAGE_LIBXKBCOMMON is not set
 BR2_PACKAGE_MRAA_ARCH_SUPPORTS=y
@@ -1704,7 +1717,7 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
 # BR2_PACKAGE_LIBUCL is not set
-# BR2_PACKAGE_LIBXML2 is not set
+BR2_PACKAGE_LIBXML2=y
 # BR2_PACKAGE_LIBXMLPP is not set
 # BR2_PACKAGE_LIBXMLRPC is not set
 # BR2_PACKAGE_LIBXSLT is not set
@@ -2151,7 +2164,7 @@ BR2_PACKAGE_PCRE=y
 # BR2_PACKAGE_PCRE_UTF is not set
 # BR2_PACKAGE_PCRE_UCP is not set
 # BR2_PACKAGE_PCRE2 is not set
-# BR2_PACKAGE_POPT is not set
+BR2_PACKAGE_POPT=y
 # BR2_PACKAGE_RE2 is not set
 # BR2_PACKAGE_READLINE is not set
 # BR2_PACKAGE_SLANG is not set
