--- a/config/buildroot-config.2022.02.1
+++ b/config/buildroot-config.2022.02.1
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -gb22187a Configuration
+# Buildroot -gcc69c84-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -2497,8 +2497,8 @@ BR2_PACKAGE_PPPD_OVERWRITE_RESOLV_CONF=y
 # BR2_PACKAGE_VSFTPD is not set
 # BR2_PACKAGE_VTUN is not set
 # BR2_PACKAGE_WAVEMON is not set
-# BR2_PACKAGE_WIREGUARD_LINUX_COMPAT is not set
-# BR2_PACKAGE_WIREGUARD_TOOLS is not set
+BR2_PACKAGE_WIREGUARD_LINUX_COMPAT=y
+BR2_PACKAGE_WIREGUARD_TOOLS=y
 # BR2_PACKAGE_WIRELESS_REGDB is not set
 # BR2_PACKAGE_WIRELESS_TOOLS is not set
 # BR2_PACKAGE_WIRESHARK is not set
@@ -2830,9 +2830,9 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://gitee.com/candtu/NUC970_U-Boot_v2016.1
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="volantis-1.0"
 BR2_TARGET_UBOOT_VERSION="volantis-1.0"
 BR2_TARGET_UBOOT_PATCH=""
-BR2_TARGET_UBOOT_USE_DEFCONFIG=y
-# BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG is not set
-BR2_TARGET_UBOOT_BOARD_DEFCONFIG="Volantis"
+# BR2_TARGET_UBOOT_USE_DEFCONFIG is not set
+BR2_TARGET_UBOOT_USE_CUSTOM_CONFIG=y
+BR2_TARGET_UBOOT_CUSTOM_CONFIG_FILE="../../config/uboot.volantis"
 BR2_TARGET_UBOOT_CONFIG_FRAGMENT_FILES=""
 # BR2_TARGET_UBOOT_NEEDS_DTC is not set
 # BR2_TARGET_UBOOT_NEEDS_PYTHON3 is not set
