--- a/config/buildroot-config.2022.02.1
+++ b/config/buildroot-config.2022.02.1
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot -gcc69c84-dirty Configuration
+# Buildroot -g9ad1ed7-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -1205,7 +1205,7 @@ BR2_PACKAGE_SEDUTIL_ARCH_SUPPORTS=y
 # udisks needs udev /dev management
 #
 # BR2_PACKAGE_UHUBCTL is not set
-BR2_PACKAGE_UMTPRD=y
+# BR2_PACKAGE_UMTPRD is not set
 
 #
 # upower needs udev /dev management
@@ -1359,11 +1359,7 @@ BR2_PACKAGE_WEBRTC_AUDIO_PROCESSING_ARCH_SUPPORTS=y
 # BR2_PACKAGE_SZIP is not set
 # BR2_PACKAGE_ZCHUNK is not set
 BR2_PACKAGE_ZLIB_NG_ARCH_SUPPORTS=y
-BR2_PACKAGE_ZLIB=y
-BR2_PACKAGE_LIBZLIB=y
-# BR2_PACKAGE_ZLIB_NG is not set
-BR2_PACKAGE_HAS_ZLIB=y
-BR2_PACKAGE_PROVIDES_ZLIB="libzlib"
+# BR2_PACKAGE_ZLIB is not set
 BR2_PACKAGE_PROVIDES_HOST_ZLIB="host-libzlib"
 # BR2_PACKAGE_ZZIPLIB is not set
 
@@ -1439,7 +1435,7 @@ BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # Filesystem
 #
 # BR2_PACKAGE_GAMIN is not set
-BR2_PACKAGE_LIBCONFIG=y
+# BR2_PACKAGE_LIBCONFIG is not set
 # BR2_PACKAGE_LIBCONFUSE is not set
 # BR2_PACKAGE_LIBFUSE is not set
 # BR2_PACKAGE_LIBFUSE3 is not set
@@ -1452,7 +1448,10 @@ BR2_PACKAGE_LIBCONFIG=y
 #
 # Graphics
 #
-# BR2_PACKAGE_ASSIMP is not set
+
+#
+# assimp needs libzlib
+#
 
 #
 # at-spi2-atk depends on X.org
@@ -1632,15 +1631,7 @@ BR2_PACKAGE_GNU_EFI_ARCH_SUPPORTS=y
 # libgudev needs udev /dev handling and a toolchain w/ wchar, threads
 #
 # BR2_PACKAGE_LIBHID is not set
-BR2_PACKAGE_LIBIIO=y
-BR2_PACKAGE_LIBIIO_LOCAL_BACKEND=y
-BR2_PACKAGE_LIBIIO_XML_BACKEND=y
-BR2_PACKAGE_LIBIIO_NETWORK_BACKEND=y
-BR2_PACKAGE_LIBIIO_USB_BACKEND=y
-BR2_PACKAGE_LIBIIO_SERIAL_BACKEND=y
-BR2_PACKAGE_LIBIIO_IIOD=y
-# BR2_PACKAGE_LIBIIO_IIOD_USBD is not set
-BR2_PACKAGE_LIBIIO_TESTS=y
+# BR2_PACKAGE_LIBIIO is not set
 
 #
 # libinput needs udev /dev management
@@ -1660,15 +1651,13 @@ BR2_PACKAGE_LIBIIO_TESTS=y
 # BR2_PACKAGE_LIBRAW1394 is not set
 # BR2_PACKAGE_LIBRTLSDR is not set
 # BR2_PACKAGE_LIBSERIAL is not set
-BR2_PACKAGE_LIBSERIALPORT=y
+# BR2_PACKAGE_LIBSERIALPORT is not set
 # BR2_PACKAGE_LIBSIGROK is not set
 # BR2_PACKAGE_LIBSIGROKDECODE is not set
 # BR2_PACKAGE_LIBSOC is not set
 # BR2_PACKAGE_LIBSS7 is not set
-BR2_PACKAGE_LIBUSB=y
-# BR2_PACKAGE_LIBUSB_EXAMPLES is not set
-# BR2_PACKAGE_LIBUSB_COMPAT is not set
-BR2_PACKAGE_LIBUSBGX=y
+# BR2_PACKAGE_LIBUSB is not set
+# BR2_PACKAGE_LIBUSBGX is not set
 # BR2_PACKAGE_LIBV4L is not set
 # BR2_PACKAGE_LIBXKBCOMMON is not set
 BR2_PACKAGE_MRAA_ARCH_SUPPORTS=y
@@ -1704,7 +1693,7 @@ BR2_PACKAGE_MRAA_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_BENEJSON is not set
 # BR2_PACKAGE_CJSON is not set
-BR2_PACKAGE_EXPAT=y
+# BR2_PACKAGE_EXPAT is not set
 # BR2_PACKAGE_JANSSON is not set
 # BR2_PACKAGE_JOSE is not set
 # BR2_PACKAGE_JSMN is not set
@@ -1717,7 +1706,7 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
 # BR2_PACKAGE_LIBUCL is not set
-BR2_PACKAGE_LIBXML2=y
+# BR2_PACKAGE_LIBXML2 is not set
 # BR2_PACKAGE_LIBXMLPP is not set
 # BR2_PACKAGE_LIBXMLRPC is not set
 # BR2_PACKAGE_LIBXSLT is not set
@@ -2041,7 +2030,7 @@ BR2_PACKAGE_LIBBSD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBEVDEV is not set
 # BR2_PACKAGE_LIBEVENT is not set
 # BR2_PACKAGE_LIBEXECINFO is not set
-BR2_PACKAGE_LIBFFI=y
+# BR2_PACKAGE_LIBFFI is not set
 # BR2_PACKAGE_LIBFUTILS is not set
 # BR2_PACKAGE_LIBGEE is not set
 # BR2_PACKAGE_LIBGEOS is not set
@@ -2158,13 +2147,9 @@ BR2_PACKAGE_TZDATA=y
 # BR2_PACKAGE_NCURSES is not set
 # BR2_PACKAGE_NEWT is not set
 # BR2_PACKAGE_ONIGURUMA is not set
-BR2_PACKAGE_PCRE=y
-# BR2_PACKAGE_PCRE_16 is not set
-# BR2_PACKAGE_PCRE_32 is not set
-# BR2_PACKAGE_PCRE_UTF is not set
-# BR2_PACKAGE_PCRE_UCP is not set
+# BR2_PACKAGE_PCRE is not set
 # BR2_PACKAGE_PCRE2 is not set
-BR2_PACKAGE_POPT=y
+# BR2_PACKAGE_POPT is not set
 # BR2_PACKAGE_RE2 is not set
 # BR2_PACKAGE_READLINE is not set
 # BR2_PACKAGE_SLANG is not set
